# Oop-5

./: CMakeLists.txt
1-5/: CDate.cpp  CDate.h
1-5/tests/: CDateTests.cpp
2-1/: CMyString.cpp  CMyString.h
2-1/tests/: CMyStringTests.cpp
